card text alignment fixed

--- a/styles.css
+++ b/styles.css
@@ -151,11 +151,14 @@ button {
   gap: 20px;
 }
 
-
+.card h3{
+  padding-bottom: 15px;
+}
 .card {
   width: 100%;
   height: 100%;
   padding: 50px;
+  text-align: center;
   /* display: flex; */
   justify-content: space-between;
   align-items: center;
